# transcriber

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
transcriber/: Cargo.toml
transcriber-cli/: Cargo.toml
transcriber-cli/src/: main.rs
transcriber-py/: Cargo.toml
transcriber-py/src/: lib.rs
transcriber/examples/: basic.rs  formats.rs  options.rs
transcriber/src/: audio.rs  config.rs  download.rs  error.rs  lib.rs  model.rs  transcribe.rs  types.rs
transcriber/src/speaker/: audio_slice.rs  embedding.rs  mod.rs  profile.rs
transcriber/tests/: integration.rs
transcriber/tests/fixtures/: sine_48khz_1s.flac
transkribo/: Cargo.toml
transkribo-cli/: Cargo.toml
transkribo-cli/src/: main.rs
transkribo-py/: Cargo.toml
transkribo-py/src/: lib.rs
transkribo/src/: audio.rs  config.rs  download.rs  error.rs  lib.rs  model.rs  transcribe.rs  types.rs
transkribo/tests/fixtures/: sine_440hz_1s.opus
