[package]
name = "transcriber-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for transcriber transcription library"
license = "MIT OR Apache-2.0"
authors = ["claymore666"]
repository = "https://github.com/claymore666/transcriber"
homepage = "https://github.com/claymore666/transcriber"
keywords = ["transcription", "whisper", "audio", "video", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]
rust-version = "1.75"

[dependencies]
transcriber = { path = "../transcriber", features = ["download"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
