[package]
name = "transcriber-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for transcriber transcription library"
license = "MIT"

[lib]
name = "transcriber"
crate-type = ["cdylib"]

[dependencies]
transcriber = { path = "../transcriber" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
