[package]
name = "transcriber"
version = "0.1.0"
edition = "2021"
description = "Video/audio transcription library — URL or file in, transcript with timestamps out"
license = "MIT OR Apache-2.0"
authors = ["claymore666"]
repository = "https://github.com/claymore666/transcriber"
homepage = "https://github.com/claymore666/transcriber"
keywords = ["transcription", "whisper", "audio", "video", "subtitle"]
categories = ["multimedia::audio"]
readme = "../README.md"
rust-version = "1.82"

[features]
default = ["download"]
download = ["tokio/process", "tokio/fs"]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
diarize = []
speaker-id = ["dep:ort", "ort/ndarray", "dep:kaldi-native-fbank", "dep:ndarray"]

[dependencies]
whisper-rs = "0.15"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
futures-util = "0.3"
ort = { version = "2.0.0-rc.12", optional = true }
kaldi-native-fbank = { version = "0.1", optional = true }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
